--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: act09
-description: "A new Flutter project."
+description: "Halloween Storybook"
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -9,13 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-  audioplayers: ^6.1.0   # for background music + sound effects
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^5.0.0
+  google_fonts: ^6.2.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
